[gd_scene load_steps=18 format=3 uid="uid://pdl53ifxu1ys"]

[ext_resource type="Script" path="res://new_player.gd" id="1_at1sy"]
[ext_resource type="Resource" uid="uid://cx5wxctt7ft4i" path="res://new_FasterMovementData.tres" id="2_x233f"]
[ext_resource type="Texture2D" uid="uid://ca2f5yd3x7j8s" path="res://fil_player.png" id="3_g7u34"]
[ext_resource type="AudioStream" uid="uid://rps6tt28uu0s" path="res://sounds/arcade-game-jump-epic-stock-media-1-00-00.mp3" id="4_i4y6h"]
[ext_resource type="AudioStream" uid="uid://d2uymtct51jsa" path="res://sounds/click.wav" id="5_suqia"]
[ext_resource type="AudioStream" uid="uid://bofimgbtfvkax" path="res://sounds/sfx_walk2.wav" id="6_xutua"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lejx3"]
atlas = ExtResource("3_g7u34")
region = Rect2(72, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykubr"]
atlas = ExtResource("3_g7u34")
region = Rect2(144, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjkea"]
atlas = ExtResource("3_g7u34")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeacy"]
atlas = ExtResource("3_g7u34")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_og6dj"]
atlas = ExtResource("3_g7u34")
region = Rect2(72, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkmc"]
atlas = ExtResource("3_g7u34")
region = Rect2(96, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygmly"]
atlas = ExtResource("3_g7u34")
region = Rect2(120, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpkwk"]
atlas = ExtResource("3_g7u34")
region = Rect2(0, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_fc2bt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lejx3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykubr")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjkea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeacy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og6dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygmly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpkwk")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox3l5"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6omq"]
size = Vector2(6, 12)

[node name="NewPlayer" type="CharacterBody2D"]
collision_layer = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 2.0
safe_margin = 0.1
script = ExtResource("1_at1sy")
new_movement_data = ExtResource("2_x233f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_fc2bt")
animation = &"run"
frame = 4
frame_progress = 0.689677

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ox3l5")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HazardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_o6omq")

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="sfx_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_i4y6h")
volume_db = -10.0

[node name="sfx_wall_bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_suqia")
volume_db = -10.0

[node name="sfx_walk2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xutua")
volume_db = -15.0

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
